--- a/notif.html
+++ b/notif.html
@@ -7,11 +7,12 @@
         <style media="screen, print">
             body{
                 font-family: "Helvetica", "Arial", sans-serif;
-                margin: 0;
+                margin: 0 auto;
                 padding: 0;
                 width: 1000px;
             }
             .container{
+				padding : 20px;
                 outline: 1px solid black;
             }
             #top{
@@ -86,8 +87,7 @@
             }
         </style>
     </head>
-    <body>
-
+    <body>		
         <div class="container" style="width: 100%">                        
             <div id="info">
 				<p>No Pendaftaran : {{nodaftar}}</p>
@@ -105,7 +105,7 @@
 				Kami tidak melakukan refund atas kelebihan atau kekurangan pembayaran				
 				</p>                
 				<p>
-					Setelah melakukan transfer, harap melakukan konfirmasi di <a href="http://menang5miliar.com/confirmation.php" target="_blank">http://menang5miliar.com/confirmation.php</a>
+					Setelah melakukan transfer, harap melakukan konfirmasi di <a href="http://www.menang5miliar.com/confirmation.php" target="_blank">http://www.menang5miliar.com/confirmation.php</a>
 				</p>
             </div>
             <div style="clear: both"></div>
