--- a/notif1.html
+++ b/notif1.html
@@ -91,17 +91,19 @@
         <div class="container" style="width: 100%">                        
             <div id="info">
 				<p>No Registrasi anda adalah: [xxxxxx]</p>
+				<pre>
 				Silahkan lakukan pembayaran sesuai dengan pilihan bank transfer anda.
 				Catatan: mohon lakukan pembayaran sesuai dengan Total Nilai Pembayaran anda.
 				Segera lakukan konfirmasi pembayaran dan konfirmasi jadwal anda dengan cara:
-				Memasukan No Registrasi anda, Nilai Nominal Pembayaran anda, dan Tanggal Pembayaran anda pada halaman utama <a href="http://www.menang5miliar.com/confirmation.php" target="_blank">www.menang5miliar.com</a> melalui Tombol konfirmasi pembayaran.				
-            </div>
-			<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK MENUJU REKENING NOMOR:</p>
-			<p>BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</p>
-            <div style="clear: both"></div>
-            <div id="bottom">               
-                <div style="clear: both"></div>
-            </div>
+				</pre>
+				<p>Memasukan No Registrasi anda, Nilai Nominal Pembayaran anda, dan Tanggal Pembayaran anda pada halaman utama <a href="http://www.menang5miliar.com/confirmation.php" target="_blank">www.menang5miliar.com</a> melalui Tombol konfirmasi pembayaran.</p>           
+				<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK MENUJU REKENING NOMOR:</p>
+				<p>BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</p>
+				<div style="clear: both"></div>
+				<div id="bottom">               
+					<div style="clear: both"></div>
+				</div>
+			</div>
         </div>
 
     </body>
