--- a/notif.html
+++ b/notif.html
@@ -91,10 +91,11 @@
         <div class="container" style="width: 100%">                        
             <div id="info">
 				<p>No Pendaftaran : {{nodaftar}}</p>
-                <p>NOMINAL PEMBAYARAN</p>
+                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>
+                <p>Rincian Pembayaran</p>
 				<p>HARGA PAKET : Rp.{{nominal}}</p>
 				<p>ADMIN FEE : Rp.2.000</p>
-				<p>TOTAL : Rp.<strong>{{total}}</strong></p>
+
 				<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK MENUJU REKENING NOMOR:
 				BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</p>
 				<p>- BIAYA TRANSFER DITANGGUNG OLEH PESERTA</p>
