--- a/notif.html
+++ b/notif.html
@@ -29,8 +29,8 @@
                 text-align: center;
             }
             #info{
-                float: left;
-                width: 480px;
+                /*float: left;*/
+                /*width: 480px;*/
                 /*outline: 1px dashed red;*/
             }
             #info > span{
