--- a/notif.html
+++ b/notif.html
@@ -91,8 +91,9 @@
         <div class="container" style="width: 100%">                        
             <div id="info">
 				<p>No Pendaftaran : {{nodaftar}}</p>
-                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>
-                <p>Rincian Pembayaran</p>
+                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>, INGAT <strong>{{total}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
+                ATAU PEMBAYARAN TIDAK BISA KAMI PROSES.
+                <p>RINCIAN PEMBAYARAN</p>
 				<p>HARGA PAKET : Rp.{{nominal}}</p>
 				<p>ADMIN FEE : Rp.2.000</p>
 
