--- a/notif.html
+++ b/notif.html
@@ -91,13 +91,13 @@
         <div class="container" style="width: 100%">                        
             <div id="info">
 				<p>No Pendaftaran : {{nodaftar}}</p>
-                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>, INGAT <strong>{{total}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
+                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>, INGAT <strong>{{ingat}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
                 ATAU PEMBAYARAN TIDAK BISA KAMI PROSES.
                 <p>RINCIAN PEMBAYARAN</p>
 				<p>HARGA PAKET : Rp.{{nominal}}</p>
 				<p>ADMIN FEE : Rp.2.000</p>
 
-				<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK MENUJU REKENING NOMOR:
+				<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK(ABAIKAN EMAIL INI JIKA ANDA MEMBAYAR MELALUI CREDIT CARD) MENUJU REKENING NOMOR:
 				BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</p>
 				<p>- BIAYA TRANSFER DITANGGUNG OLEH PESERTA</p>
 				<p>- BIAYA TRANSFER MENGIKUTI KEBIJAKAN BANK.</p>
