--- a/notif.html
+++ b/notif.html
@@ -11,6 +11,9 @@
                 padding: 0;
                 width: 1000px;
             }
+            li {
+                padding: 10px;
+            }
             .container{
 				padding : 20px;
                 outline: 1px solid black;
@@ -97,18 +100,29 @@
 				<p>HARGA PAKET : Rp.{{nominal}}</p>
 				<p>ADMIN FEE : Rp.2.000</p>
 
-				<p>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK(ABAIKAN EMAIL INI JIKA ANDA MEMBAYAR MELALUI CREDIT CARD) MENUJU REKENING NOMOR:
-				BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</p>
-				<p>- BIAYA TRANSFER DITANGGUNG OLEH PESERTA</p>
-				<p>- BIAYA TRANSFER MENGIKUTI KEBIJAKAN BANK.</p>
-				<p>
-				Batas waktu pembayaran adalah 3 jam, setelah anda mengkonfirmasi halaman ini
-				Harap pembayaran dilakukan sesuai nominal pembayaran
-				Kami tidak melakukan refund atas kelebihan atau kekurangan pembayaran				
-				</p>                
-				<p>
-					Setelah melakukan transfer, harap melakukan konfirmasi di <a href="http://www.menang5miliar.com/confirmation.php" target="_blank">http://www.menang5miliar.com/confirmation.php</a>
-				</p>
+                <ul>
+                    <li>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK(ABAIKAN EMAIL INI JIKA ANDA MEMBAYAR MELALUI CREDIT CARD) MENUJU REKENING NOMOR:
+                        BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</li>
+                    <li>- BIAYA TRANSFER DITANGGUNG OLEH PESERTA</li>
+                    <li>- BIAYA TRANSFER MENGIKUTI KEBIJAKAN BANK.</li>
+                    <li>
+                        Batas waktu pembayaran adalah 3 jam, setelah anda mengkonfirmasi halaman ini
+                        Harap pembayaran dilakukan sesuai nominal pembayaran
+                        Kami tidak melakukan refund atas kelebihan atau kekurangan pembayaran
+                    </li>
+                    <li>
+                        Setelah melakukan transfer, harap melakukan konfirmasi di <a href="http://www.menang5miliar.com/confirmation.php" target="_blank">http://www.menang5miliar.com/confirmation.php</a>
+                    </li>
+                    <li>
+                        Bila dalam waktu 1x24 jam , tdk mendapatkan tiket setelah konfirmasi pembayaran. Maka calon peserta harus mengirimkan nomor registrasi, foto identifikasi dan foto bukti bayar ke alamat : payment@menang5miliar.com
+                    </li>
+                    <li>
+                        Setelah identifikasi maka h+3 akan dilakukan transfer ke bank yang bersangkutan setelah ada konfirmasi dari pihak penyelengara
+                    </li>
+                    <li>
+                        Biaya transfer balik akan dibebankan kepada calon peserta sebesar biaya SKN untuk bank tujuan.
+                    </li>
+                </ul>
             </div>
             <div style="clear: both"></div>
             <div id="bottom">               
