--- a/notif.html
+++ b/notif.html
@@ -93,7 +93,16 @@
     <body>		
         <div class="container" style="width: 100%">                        
             <div id="info">
-				<p>No Pendaftaran : {{nodaftar}}</p>
+                <ul>
+                    <li>No Pendaftaran : {{nodaftar}}</li>
+                    <li>No KTP : {{noktp}}</li>
+                    <li>Nama : {{nama}}</li>
+                    <li>Lokasi : {{lokasi}}</li>
+                    <li>Tanggal : {{tanggal}}</li>
+                    <li>Waktu : {{jam}}</li>
+                    <li><stong>PASTIKAN NAMA ANDA, LOKASI, SERTA WAKTU LOMBA SUDAH SESUAI SEBELUM MELAKUKAN TRANSFER</stong></li>
+                </ul>
+
                 <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>, INGAT <strong>{{ingat}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
                 ATAU PEMBAYARAN TIDAK BISA KAMI PROSES.
                 <p>RINCIAN PEMBAYARAN</p>
