--- a/notif.html
+++ b/notif.html
@@ -103,8 +103,9 @@
                     <li><stong>PASTIKAN NAMA ANDA, LOKASI, SERTA WAKTU LOMBA SUDAH SESUAI SEBELUM MELAKUKAN TRANSFER</stong></li>
                 </ul>
 
-                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>, INGAT <strong>{{ingat}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
-                ATAU PEMBAYARAN TIDAK BISA KAMI PROSES.
+                <p><h1>Biaya Pendaftaran : Rp.<strong>{{total}}</strong></h1></p>
+                <p>INGAT <strong>{{ingat}}</strong> TIDAK BOLEH KURANG ATAU LEBIH,
+                ATAU PEMBAYARAN TIDAK BISA KAMI PROSES.</p>
                 <p>RINCIAN PEMBAYARAN</p>
 				<p>HARGA PAKET : Rp.{{nominal}}</p>
 				<p>ADMIN FEE : Rp.2.000</p>
@@ -112,8 +113,8 @@
                 <ul>
                     <li>PEMBAYARAN DILAKUKAN MELALUI TRANSFER BANK(ABAIKAN EMAIL INI JIKA ANDA MEMBAYAR MELALUI CREDIT CARD) MENUJU REKENING NOMOR:
                         BANK MANDIRI: 124.000.732.6987 A/N: PT.GLOBAL DINAMIKA INTERNUSA</li>
-                    <li>- BIAYA TRANSFER DITANGGUNG OLEH PESERTA</li>
-                    <li>- BIAYA TRANSFER MENGIKUTI KEBIJAKAN BANK.</li>
+                    <li>BIAYA TRANSFER DITANGGUNG OLEH PESERTA</li>
+                    <li>BIAYA TRANSFER MENGIKUTI KEBIJAKAN BANK.</li>
                     <li>
                         Batas waktu pembayaran adalah 3 jam, setelah anda mengkonfirmasi halaman ini
                         Harap pembayaran dilakukan sesuai nominal pembayaran
